# learning-ai-langchain

./: .env.example  .gitignore  .mcp.json  AGENTS.md  justfile  langgraph.json  pyproject.toml
lesson_generator/: __init__.py  __main__.py  domains.py  graph.py  models.py  nodes.py  prompts.py  state.py  tools.py
lesson_generator/templates/: __init__.py  app_scaffold.py.tmpl  concept_lesson.py.tmpl  integration_lesson.py.tmpl
react_agent/: __init__.py  __main__.py  agent.py
tests/: __init__.py  conftest.py  test_domains.py  test_graph.py  test_models.py  test_nodes.py  test_tools.py
