[project]
name = "learning-ai-langchain"
version = "0.1.0"
description = "Minimal LangChain + LangGraph example with ReAct agent."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "langgraph>=1.0.0",
  "langchain-anthropic>=1.0.0",
  "langchain-openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0",
]

[tool.uv.sources]
langchain-core = { path = "../../../study/ai-agents/langchain/libs/core", editable = true }
langchain-anthropic = { path = "../../../study/ai-agents/langchain/libs/partners/anthropic", editable = true }
langchain-openai = { path = "../../../study/ai-agents/langchain/libs/partners/openai", editable = true }
langgraph = { path = "../../../study/ai-agents/langgraph/libs/langgraph", editable = true }
langgraph-prebuilt = { path = "../../../study/ai-agents/langgraph/libs/prebuilt", editable = true }
langgraph-checkpoint = { path = "../../../study/ai-agents/langgraph/libs/checkpoint", editable = true }
langgraph-sdk = { path = "../../../study/ai-agents/langgraph/libs/sdk-py", editable = true }

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["react_agent", "lesson_generator"]

[tool.mypy]
strict = true
python_version = "3.10"
files = [
  "react_agent",
  "lesson_generator",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "UP", # pyupgrade
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "COM", # flake8-commas
  "EM", # flake8-errmsg
  "Q", # flake8-quotes
  "PTH", # flake8-use-pathlib
  "SIM", # flake8-simplify
  "TRY", # Trycertatops
  "PERF", # Perflint
  "RUF", # Ruff-specific rules
  "D", # pydocstyle
  "FA100",  # future annotations
]
ignore = [
  "COM812", # missing trailing comma, ruff format conflict
]
extend-safe-fixes = [
  "UP006",
  "UP007",
]
pyupgrade.keep-runtime-typing = false

[tool.ruff.lint.isort]
known-first-party = [
  "react_agent",
  "lesson_generator",
]
combine-as-imports = true
required-imports = [
  "from __future__ import annotations",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"tests/**/*.py" = ["D100", "D102", "D103"]

[tool.pytest.ini_options]
addopts = [
  "--tb=short",
  "--no-header",
  "--showlocals",
]
asyncio_mode = "auto"
